# libs7

./: .bazeliskrc  .bazelrc  .bazelversion  .gitignore  BUILD.bazel  BUILD.bzl  LICENSE  MODULE.bazel  README.adoc  README.md  WORKSPACE.bazel  WORKSPACE.bzl  WORKSPACE.notcurses.bzl  case.scm  cload.scm  ffitest.c  gdbinit  libarb_s7.c  libc.scm  libdl.scm  libgsl.scm  libm.scm  libutf8proc.scm  lint.scm  mockery.scm  notcurses_s7.c  nrepl-bits.h  nrepl.c  nrepl.scm  profile.scm  r7rs.scm  reactive.scm  repl.c  repl.scm  s7.c  s7.h  s7.html  stuff.scm  write.scm
config/: BUILD.bazel  BUILD.bzl  ansi_colors.h  config.h  config.h.in  logging.h
config/cc/: BUILD.bzl  CONFIG.bzl
config/clibs/link/: BUILD.bazel
config/clibs/with/: BUILD.bazel
config/debug/: BUILD.bazel
config/feature/: BUILD.bazel.in
config/host/: BUILD.bazel
config/libs/: BUILD.bazel
config/nrepl/: BUILD.bazel
config/profile/: BUILD.bazel
config/repl/: BUILD.bazel
config/s7/: BUILD.bazel
imports/libarb/: BUILD.bazel
imports/libdeflate/: BUILD.bazel
imports/libflint/: BUILD.bazel
imports/libgdbm/: BUILD.bazel
imports/libgmp/: BUILD.bazel
imports/libgsl/: BUILD.bazel
imports/libmpc/: BUILD.bazel
imports/libmpfr/: BUILD.bazel
imports/libncurses/: BUILD.bazel
imports/libunistring/: BUILD.bazel
imports/libutf8proc/: BUILD.bazel
imports/notcurses/: BUILD.bazel
imports/utf8proc/: BUILD.bazel
lib/: BUILD.bazel  BUILD.bzl  cgen.c  cgen.scm  clibgen.c  clibgen.scm  debug_s7.c  fs_api.c  libc_cgen.scm  libc_clibgen.scm  libc_s7.c  libc_s7.macos.c  libcwalk_cgen.scm  libcwalk_clib.scm  libdl_cgen.scm  libdl_clib.scm  libdl_s7.c  libgdbm_cgen.scm  libgdbm_clib.scm  libgdbm_s7.c  libgsl_cgen.scm  libgsl_clib.scm  libgsl_s7.c  libm_cgen.scm  libm_clib.scm  libm_s7.c  libs7.c  libutf8proc_cgen.scm  libutf8proc_clib.scm  libutf8proc_s7.c  s7.h  utils.c  utils.h
lib/libarb/: BUILD.bazel  libarb_s7.c
lib/libc/: BUILD.bazel  libc_clibgen.scm
lib/libcwalk/: BUILD.bazel  libcwalk_clibgen.scm
lib/libdl/: BUILD.bazel  libdl_clibgen.scm
lib/libdune/: BUILD.bazel  dune_readers.c  error_handler_dune.c  error_handler_dune.h  libdune_s7.c  libdune_s7.h
lib/libgdbm/: BUILD.bazel  libgdbm_clibgen.scm
lib/libgsl/: BUILD.bazel  libgsl_clibgen.scm
lib/libjson/: BUILD.bazel  README.md  cJSON.LICENSE  cjson_array_s7.c  cjson_map_s7.c  cjson_vector_s7.c  libcjson_clibgen.scm  libcjson_s7.c  libcjson_s7.h  libjson_s7.h
lib/libm/: BUILD.bazel  libm.scm  libm_clibgen.scm
lib/libmustache/: BUILD.bazel  BUILD.bzl  libmustache.c  libmustachios7_s7.c  libmustachios_s7.c  libmustachios_s7.h  mustach.c  mustach.h  mustach_toml.c  mustach_toml.h  mustach_tomlc99.c  mustach_tomlc99.h  mustachios7_cjson.c  mustachios7_cjson.h  mustachios7_json.c  mustachios7_json.h  mustachios7_s7.c  mustachios7_s7.h  mustachios7_wrap.c  mustachios7_wrap.h
lib/libmustache/json/: BUILD.bazel  mustach_cjson.c  mustach_cjson.h  mustach_json_ds_mgr.c
lib/libmustache/mustach/: BUILD.bazel  memfile_tmpfile.c  mustach.c  mustach.h
lib/libmustache/scm/: mustachios7_scm.c  mustachios7_scm.h
lib/libmustache/toml/: BUILD.bazel  mustach_toml_ds_mgr.c  mustach_toml_ds_mgr.h  mustach_tomlc99.c  mustach_tomlc99.h  mustache_toml_ds_mgr.c  mustache_toml_ds_mgr.h  mustache_tomlc99.c  mustache_tomlc99.h
lib/libmustachios/: BUILD.bazel  BUILD.bzl  libmustachios_s7.c  libmustachios_s7.h
lib/libmustachios/mustach/: BUILD.bazel  memfile.h  memfile_memstream.c  mustach.c  mustach.h
lib/libmustachios/syntax/: BUILD.bazel
lib/libmustachios/toml/: BUILD.bazel  mustache_toml_ds_mgr.c  mustache_tomlc99.c
lib/libmustachios7/: BUILD.bazel  c_stacktrace.h  debug.h  libmustachios7_s7.c  libmustachios7_s7.h  mustachios7_cjson.c  mustachios7_cjson.h  mustachios7_json.c  mustachios7_json.h  mustachios7_s7.c  mustachios7_s7.h  mustachios7_scm.c  mustachios7_wrap.c  mustachios7_wrap.h
lib/libnotcurses/: notcurses_s7.c
lib/libregex/: BUILD.bazel  libregex_clibgen.scm
lib/libsexp/: BUILD.bazel  README.adoc  error_handler_sexp.c  libsexp_s7.c  libsexp_s7.orig.c
lib/libtoml/: BUILD.bazel  libtoml_clibgen.scm  libtoml_s7.c  libtoml_s7.h  toml.c  toml_array_deprecated.c  toml_array_s7.c  toml_array_s7.h  toml_datetime_s7.c  toml_table_deprecated.c  toml_table_s7.c  toml_table_s7.h  tomlx.c  tomlx.h
lib/libutf8proc/: BUILD.bazel  libutf8proc_clibgen.scm
lib/shared/: BUILD.bazel
lib/static/: BUILD.bazel
lib/system_extras/: BUILD.bazel  system_extras.c  system_extras.h
plugin/: BUILD.bazel  CONFIG.bzl  MACROS.bzl  README.adoc  RULES.bzl  clibgen.c  clibgen.scm  s7plugin_test_config.c
repl/: BUILD.bazel  README.adoc  dumb_repl.c  nrepl.c  nrepl.original.c  nrepl_nlibc.c  nrepl_no_main.c  repl.c  repl.scm  repl_dumb_dynamic.c  repl_dumb_static.c  repl_dynamic.c  repl_notcurses.c  repl_static.c  xen_repl.c
repl/nrepl_dev/: nrepl.c
src/: BUILD.bazel  canonicalize.c  debug_s7.c  fs_api.c  glob.c  libc_s7.c  libs7.c  libs7.h  libs7_init.c  notcurses_s7.c  nrepl.c  regex.c  s7.c  s7.h  s7_repl.c  s7_utils.c  s7_utils.h  shell_api.c
src/macros/: BUILD.bazel  ansi_colors.h  notrace.h  trace.h
src/originals/: s7.h
test/: BUILD.bazel  BUILD.bzl  MODULE.bazel  README.adoc  cjson_test.c  common.c  common.h  cwalk_test.c  gdbm_test.c  gsl_test.c  libc_test.c  libutf8proc_s7_test.c  math_test.c  repl_test.scm  s7_test.c  test-alist.scm  toml_test.c  utf8proc_test.c
test/app/: BUILD.bazel  BUILD.bzl  mustachios_test_runner.c
test/batch/: BUILD.bazel
test/batch/cargo/: BUILD.bazel  README.adoc
test/data/: BUILD.bazel  example.json  example.scm  nested.json  nested.scm  spec-example-1.toml  strings.json  strings.scm  strings.toml
test/lib/: BUILD.bazel
test/libjson/: BUILD.bazel  json_array_to_scm_test.c  json_repl_test.scm
test/libmustachios/: BUILD.bazel  BUILD.bzl  utils.c
test/libtoml/: BUILD.bazel  toml_arrays_test.c  toml_maps_test.c  toml_repl_test.scm  toml_strings_test.c
test/repl/: json_repl.scm  scm_repl.scm  toml_repl.scm
test/unit/: BUILD.bazel  README  common.h  libm_test.c  s7_test.c  utf8proc_test.c
(+423 files in other folders)
