module(
    name                = "libs7",
    version             = "3.0.0.dev",
    compatibility_level = 3,
    bazel_compatibility = [">=8.0.0"]
)

## bcr:
bazel_dep(name = "platforms",      version = "0.0.11")
bazel_dep(name = "bazel_skylib",   version = "1.7.1")
bazel_dep(name = "rules_cc",       version = "0.1.1")

## obazl:
bazel_dep(name = "obazl_tools_cc",  version = "3.0.0.dev")
bazel_dep(name = "runfiles",       version = "3.0.0.dev")

## 3rd party
bazel_dep(name = "gopt",           version = "10.0.0")
bazel_dep(name = "liblogc",        version = "3.0.0")
bazel_dep(name = "makeheaders",    version = "3.0.0")
bazel_dep(name = "uthash",         version = "2.3.0.bzl")
bazel_dep(name = "unity",          version = "2.6.1.bzl")

