workspace(name = "libs7")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

load("//:WORKSPACE.bzl", "fetch_repos")
fetch_repos()

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

## If build tools (make, autoconf, etc.) already installed, don't build
rules_foreign_cc_dependencies(register_built_tools=False)
## rules_foreign_cc_dependencies()
