workspace(name = "libs7")

# load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
# load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

# load(":WORKSPACE.bzl", libs7_fetch_repos = "fetch_repos")
# libs7_fetch_repos()

# load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")
# rules_foreign_cc_dependencies()

# load(":WORKSPACE.notcurses.bzl", "fetch_repos")
# fetch_repos()
