package(default_visibility = ["//visibility:public"])

exports_files(["libm.scm", "utils.c", "utils.h"])

load("//:BUILD.bzl",
     "BASE_SRCS", "BASE_DEPS", "BASE_INCLUDE_PATHS",
     "BASE_COPTS", "BASE_DEFINES", "BASE_LINKOPTS",
     "LIBUTHASH_CC_VERSION")

load("//lib:BUILD.bzl", "CLIB_COPTS", "CLIB_LINKOPTS")

SRCS          = BASE_SRCS
INCLUDE_PATHS = BASE_INCLUDE_PATHS
COPTS         = BASE_COPTS + CLIB_COPTS + INCLUDE_PATHS
DEPS          = BASE_DEPS
DEFINES       = BASE_DEFINES
LINKOPTS      = BASE_LINKOPTS + CLIB_LINKOPTS

################################################################
## clibgen - builds s7 batch processor, for processing lib*_clibgen.scm to
## generate c sources.
################################################################
cc_binary(
    name  = "clibgen",
    srcs  = SRCS + ["clibgen.c"],
    deps = DEPS + [
        "//src:s7",
        "@gopt//:gopt",
        "@uthash//src:uthash",
        # "//vendored/gopt",
        # "//vendored/uthash"
    ],
    data = [
        "//scm:srcs",
        # ":libclib.scm",
        ":clibgen.scm"
    ],
    copts =  COPTS + [
        "-Isrc", "-Iexternal/libs7/src",
        "-Iexternal/uthash~{}/src".format(LIBUTHASH_CC_VERSION),
        # "-Ivendored/gopt", "-Iexternal/libs7/vendored/gopt",
        # "-Ivendored/uthash", "-Iexternal/libs7/vendored/uthash",
    ],
    local_defines = DEFINES + select({
        "//:linux": [
            "_POSIX_C_SOURCE=200809L" # strndup
        ],
        "//conditions:default": []
    }),
    linkopts = LINKOPTS,
)

################################################################
cc_library(
    name  = "utils",
    linkstatic = True,
    # alwayslink = True, # ensure init fn sym available for dlsym
    srcs  = SRCS + ["utils.c"],
    hdrs  = ["utils.h"],
    deps  = DEPS + [
        "//src:s7",
    ],
    # + select({
    #     "//config/profile:dev?": ["//dev"],
    #     "//config/profile:test?": ["//dev"],
    #     "//conditions:default":  []
    # }),
    copts = COPTS + INCLUDE_PATHS + CLIB_COPTS + [
        "-Isrc", "-Iexternal/libs7/src",
    ],
    # + select({
    #     "//config/profile:dev?": ["-Idev", "-Iexternal/libs7/dev"],
    #     "//config/profile:test?": ["-Idev", "-Iexternal/libs7/dev"],
    #     "//conditions:default":  []
    # }),
    linkopts = LINKOPTS,
    local_defines = DEFINES
)
